--- a/serverless.yml
+++ b/serverless.yml
@@ -3,7 +3,7 @@ provider:
   name: aws
   runtime: nodejs12.x
   stage: dev
-  region: us-west-2
+  region: ap-south-1
   memorySize: 128
 functions:
   app:
