--- a/serverless.yml
+++ b/serverless.yml
@@ -1,9 +1,9 @@
 service: serverless-demo
 provider:
   name: aws
-  runtime: nodejs12.x
+  runtime: nodejs14.x
   stage: dev
-  region: ap-south-1
+  region: eu-central-1
   memorySize: 128
 functions:
   app:
