--- a/.github/workflows/android-firebase.yml
+++ b/.github/workflows/android-firebase.yml
@@ -23,7 +23,7 @@ jobs:
       run: ./gradlew build
 
     - name: build release 
-      run: ./gradlew assembleRelease
+      run: cd android && ./gradlew clean && ./gradlew assembleRelease"
     - name: list files
       run: ls -lrt app/build/outputs/apk/release
       
